# SecAudit-CLI

./: README.md  pyproject.toml
secaudit/: __init__.py  cli.py  config.py  models.py  utils.py
secaudit/ai/: __init__.py  explainer.py
secaudit/core/: __init__.py  pipeline.py
secaudit/scanners/: __init__.py  dependencies.py  patterns.py  secrets.py
tests/: __init__.py  test_filtering.py  test_patterns.py  test_pipeline.py  test_secrets.py
